tools/rpk-automation/gen/23.1/rpk-redpanda-admin-brokers-list.adoc
= rpk redpanda admin brokers list
:description: rpk redpanda admin brokers list

List the brokers in your cluster

== Usage

[,bash]
----
rpk redpanda admin brokers list [flags]
----

== Aliases

[,bash]
----
list, ls
----

== Flags

[cols="1m,1a,2a]
|===
|*Value* |*Type* |*Description*

|`-h, --help` |- |Help for list.

|`--admin-api-tls-cert` |string |The certificate to be used for TLS authentication with the Admin API.

|`--admin-api-tls-enabled` |- |Enable TLS for the Admin API (not necessary if specifying custom certs).

|`--admin-api-tls-key` |string |The certificate key to be used for TLS authentication with the Admin API.

|`--admin-api-tls-truststore` |string |The truststore to be used for TLS communication with the Admin API.

|`--config` |string |rpk config file, if not set the file will be searched for in the default locations.

|`--hosts` |strings |A comma-separated list of Admin API addresses (|IP|:|port|). You must specify one for each node.

|`--password` |string |SASL password to be used for authentication.

|`--sasl-mechanism` |string |The authentication mechanism to use. Supported values: SCRAM-SHA-256, SCRAM-SHA-512.

|`--user` |string |SASL user to be used for authentication.

|`-v, --verbose` |- |Enable verbose logging (default: false).
|===